--- a/src/StormpathCustomSamlDemo/Views/Login/Index.cshtml
+++ b/src/StormpathCustomSamlDemo/Views/Login/Index.cshtml
@@ -3,13 +3,32 @@
 }
 <h2>Log in</h2>
 
-<form method="post" action="/stormpathLogin">
+<form>
     <p>
         <label for="login">Email:</label>
-        <input type="email" id="login" name="login" placeholder="you@example.com" required="required"/>
+        <input type="email" id="login" placeholder="you@example.com" required="required"/>
     </p>
     <p>
-        <label for="password">Password</label><input type="password" id="password" name="password" placeholder="Enter your password" required="required" />
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Enter your password" required="required"/>
     </p>
-    <input type="submit" />
+    <p id="feedback"></p>
+    <input type="submit"/>
 </form>
+
+<script language="javascript">
+    var email = document.getElementById("login");
+    var feedback = document.getElementById("feedback");
+
+    email.addEventListener("keyup",
+        function(event) {
+            if (email.validity.valid) {
+                $.post(
+                    "/login/getAccountType",
+                    { email: email.value },
+                    function(data) {
+                        console.log(data);
+                    })
+            };
+        });
+</script>
