--- a/src/StormpathCustomSamlDemo/Views/Shared/_Layout.cshtml
+++ b/src/StormpathCustomSamlDemo/Views/Shared/_Layout.cshtml
@@ -34,6 +34,26 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
+                @if (Context.User.Identity.IsAuthenticated)
+                {
+                    <form action="/logout" method="post" id="logout_form">
+                        <ul class="nav navbar-nav navbar-right">
+
+                            <li><p class="navbar-text">Hello, <b>@Context.User.Identity.Name</b></p></li>
+                            <li><a asp-controller="Manage" asp-action="Index">Manage Account</a></li>
+                            <li>
+                                <a onclick="document.getElementById('logout_form').submit();" style="cursor: pointer;">Log Out</a>
+                            </li>
+                        </ul>
+                    </form>
+                }
+                else
+                {
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/register">Register</a></li>
+                        <li><a href="/login">Log In</a></li>
+                    </ul>
+                }
             </div>
         </div>
     </div>
