--- a/src/StormpathCustomSamlDemo/Views/Shared/_Layout.cshtml
+++ b/src/StormpathCustomSamlDemo/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <ul class="nav navbar-nav navbar-right">
 
                             <li><p class="navbar-text">Hello, <b>@Context.User.Identity.Name</b></p></li>
-                            <li><a asp-controller="Manage" asp-action="Index">Manage Account</a></li>
+                            <li><a asp-controller="Profile" asp-action="Index">View Profile</a></li>
                             <li>
                                 <a onclick="document.getElementById('logout_form').submit();" style="cursor: pointer;">Log Out</a>
                             </li>
