--- a/src/StormpathCustomSamlDemo/Views/Stormpath/CustomLogin.cshtml
+++ b/src/StormpathCustomSamlDemo/Views/Stormpath/CustomLogin.cshtml
@@ -5,15 +5,15 @@
 }
 <h2>Log in</h2>
 
-<form>
+<form method="post">
     <p>@string.Join("<br/>", Model.Errors)</p>
     <div>
         <label for="login">Email:</label>
-        <input type="email" id="login" placeholder="you@example.com" required="required"/>
+        <input type="email" id="login" name="login" placeholder="you@example.com" required="required"/>
     </div>
     <div id="password-group">
         <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter your password" required="required"/>
+        <input type="password" id="password" name="password" placeholder="Enter your password" required="required"/>
     </div>
     <input type="submit" id="submit"/>
 </form>
